--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <div class='legend'>GIZ</div>
                     <div class='legend'>EU Project</div>
                     <div class='legend'>UNDP</div>
+                    <div class='legend'>UCBI-IDLO</div>
                     <div class='legend'>ДФРР</div>
                     <div class='legend'>Інфраструктурна субвенція ОТГ</div> 
                     <div class='legend'>Без підтримки</div>
@@ -55,13 +56,15 @@
                     <label for="euproject"></label></div>
                     <div style="margin-top: 121px"><input type="checkbox" class="squaredTwo" value="undp" id="undp" name="check" checked /> 
                     <label for="undp"></label></div>
-                    <div style="margin-top: 150px"><input type="checkbox" class="squaredTwo" value="dfrr" id="dfrr" name="check" checked /> 
+                    <div style="margin-top: 150px"><input type="checkbox" class="squaredTwo" value="ucbi_idlo" id="ucbi_idlo" name="check" checked />
+                    <label for="ucbi_idlo"></label></div>
+                    <div style="margin-top: 179px"><input type="checkbox" class="squaredTwo" value="dfrr" id="dfrr" name="check" checked /> 
                     <label for="dfrr"></label></div>
-                    <div style="margin-top: 179px"><input type="checkbox" class="squaredTwo" value="subvention" id="subvention" name="check" checked /> 
+                    <div style="margin-top: 207px"><input type="checkbox" class="squaredTwo" value="subvention" id="subvention" name="check" checked /> 
                     <label for="subvention"></label></div>
-                    <div style="margin-top: 207px"><input type="checkbox" class="squaredTwo" value="rest" id="rest" name="check" checked />
+                    <div style="margin-top: 233px"><input type="checkbox" class="squaredTwo" value="rest" id="rest" name="check" checked />
                     <label for="rest"></label></div>      
-                    <div style="margin-top: 235px"><input type="checkbox" class="squaredTwo" value="priorOtg" id="priorOtg" name="check" checked /> 
+                    <div style="margin-top: 260px"><input type="checkbox" class="squaredTwo" value="priorOtg" id="priorOtg" name="check" checked /> 
                     <label for="priorOtg"></label></div>
                 </div>
             </div>
