--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 }
             };
 
-              function ui_perm(feature){
+              function pointStyle_ui_perm(feature){
                 return {
                     radius: 1,
                     fillColor: "#663300",
@@ -311,7 +311,7 @@
                 }
             };
             
-             function ui_5(feature){
+             function pointStyle_ui_5(feature){
                 return {
                     radius: 2,
                     fillColor: "#663300",
@@ -467,7 +467,7 @@
                 }
             }; 
 
-            function pointStyle_priorOtg_6(feature){
+            function pointStyle_ui_6(feature){
                 return {
                     radius: 3.5,
                     fillColor: "#663300",
@@ -601,7 +601,7 @@
                 iconAnchor: [8,8]
             });
 
-              var priorOtg_7_style = L.icon({
+              var ui_7_style = L.icon({
                 iconUrl: 'data/ui_7.svg',
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
@@ -688,7 +688,7 @@
                 iconAnchor: [12,12]
             });
 
-            var priorOtg_8_style = L.icon({
+            var ui_8_style = L.icon({
                 iconUrl: 'data/ui_8.svg',
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
@@ -1987,7 +1987,7 @@
                 priorOtg = priorOtg_6;
                 subvention = subvention_6;
                 dfrr = dfrr_6;
-                 ui = ui_6;
+                ui = ui_6;
                 euproject = L.layerGroup([euproject_6, euproject_6_pr]);
                 egap = L.layerGroup([egap_6, egap_6_pr]);
                 giz = L.layerGroup([giz_6, giz_6_pr]);
