--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     radius: 1,
                     fillColor: "orange",
                     color: "orange",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
@@ -170,6 +171,7 @@
                     radius: 1,
                     fillColor: "#fffdba",
                     color: "#fffdba",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -181,6 +183,7 @@
                     radius: 0.5,
                     fillColor: "#4fff19",
                     color: "#4fff19",
+                    z-index: 200,
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -192,6 +195,7 @@
                     radius: 0.5,
                     fillColor: "#3df5ff",
                     color: "#3df5ff",
+                    z-index: 200,
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -203,6 +207,7 @@
                     radius: 1,
                     fillColor: "#663300",
                     color: "#663300",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -215,6 +220,7 @@
                     radius: 1,
                     fillColor: "red",
                     color: "red",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -226,6 +232,7 @@
                     radius: 1,
                     fillColor: "green",
                     color: "green",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -237,6 +244,7 @@
                     radius: 1,
                     fillColor: "blue",
                     color: "blue",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -248,6 +256,7 @@
                     radius: 1,
                     fillColor: '#fbff01',
                     color: '#fbff01',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -259,6 +268,7 @@
                     radius: 1,
                     fillColor: '#8A2BE2',
                     color: '#8A2BE2',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -270,6 +280,7 @@
                     radius: 2,
                     fillColor: "orange",
                     color: "orange",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
@@ -283,6 +294,7 @@
                     radius: 2,
                     fillColor: "#fffdba",
                     color: "black",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -294,6 +306,7 @@
                     radius: 1,
                     fillColor: "#4fff19",
                     color: "#cc56ff",
+                    z-index: 200,
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -305,6 +318,7 @@
                     radius: 1,
                     fillColor: "#3df5ff",
                     color: "#ff56eb",
+                    z-index: 200,
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -316,6 +330,7 @@
                     radius: 2,
                     fillColor: "#663300",
                     color: "black",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -327,6 +342,7 @@
                     radius: 2,
                     fillColor: "red",
                     color: "red",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -338,6 +354,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: "red",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -349,6 +366,7 @@
                     radius: 2,
                     fillColor: "green",
                     color: "green",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -360,6 +378,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: "green",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -371,6 +390,7 @@
                     radius: 2,
                     fillColor: "blue",
                     color: "blue",
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -382,6 +402,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: '#8A2BE2',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -393,6 +414,7 @@
                     radius: 2,
                     fillColor: '#fbff01',
                     color: '#fbff01',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -404,6 +426,7 @@
                     radius: 2,
                     fillColor: '#8A2BE2',
                     color: '#8A2BE2',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -415,6 +438,7 @@
                     radius: 2,
                     fillColor: 'white',
                     color: '#fbff01',
+                    z-index: 100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -427,6 +451,7 @@
                     radius: 3.5,
                     fillColor: "green",
                     color: "#004c00",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -439,6 +464,7 @@
                     radius: 3.5,
                     fillColor: "#fffdba",
                     color: "black",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -450,6 +476,7 @@
                     radius: 1.7,
                     fillColor: "#4fff19",
                     color: "#cc56ff",
+                    z-index: 200,
                     weight: 1.4,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -461,6 +488,7 @@
                     radius: 1.7,
                     fillColor: "#3df5ff",
                     color: "#ff56eb",
+                    z-index: 200,
                     weight: 1.4,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -472,6 +500,7 @@
                     radius: 3.5,
                     fillColor: "#663300",
                     color: "black",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -484,6 +513,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: "#004c00",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -495,6 +525,7 @@
                     radius: 3.5,
                     fillColor: "red",
                     color: '#7f0000',
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -506,6 +537,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: '#7f0000',
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -517,6 +549,7 @@
                     radius: 3.5,
                     fillColor: "blue",
                     color: "#00007f",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -528,6 +561,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: "#6e22b4",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -539,6 +573,7 @@
                     radius: 3.5,
                     fillColor: "orange",
                     color: "#7f5200",
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -551,6 +586,7 @@
                     radius: 3.5,
                     fillColor: '#fbff01',
                     color: '#7f6b00',
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -562,6 +598,7 @@
                     radius: 3.5,
                     fillColor: 'white',
                     color: '#7f6b00',
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -573,6 +610,7 @@
                     radius: 3.5,
                     fillColor: '#8A2BE2',
                     color: '#6e22b4',
+                    z-index: 100,
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -585,83 +623,97 @@
 
             var priorOtg_7_style = L.icon({
                 iconUrl: 'data/priorOtg_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
              var subvention_7_style = L.icon({
                 iconUrl: 'data/subvention_7.svg',
+                z-index: 200,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
               var dfrr_7_style = L.icon({
                 iconUrl: 'data/dfrr_7.svg',
+                z-index: 200,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
               var ui_7_style = L.icon({
                 iconUrl: 'data/ui_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var giz_7_style = L.icon({
                 iconUrl: 'data/egap_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var giz_7_pr_style = L.icon({
                 iconUrl: 'data/egap_pr_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var ulead_7_style = L.icon({
                 iconUrl: 'data/rest_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var ulead_7_pr_style = L.icon({
                 iconUrl: 'data/rest_7_pr.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var undp_7_style = L.icon({
                 iconUrl: 'data/ulead_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var euproject_7_style = L.icon({
                 iconUrl: 'data/euproject_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var euproject_7_pr_style = L.icon({
                 iconUrl: 'data/euproject_pr_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var egap_7_style = L.icon({
                 iconUrl: 'data/undp_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
             var egap_7_pr_style = L.icon({
                 iconUrl: 'data/undp_pr_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var rest_7_style = L.icon({
                 iconUrl: 'data/giz_7.svg',
+                z-index: 100,
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });                                    
@@ -672,54 +724,63 @@
 
             var priorOtg_8_style = L.icon({
                 iconUrl: 'data/priorOtg_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var subvention_8_style = L.icon({
                 iconUrl: 'data/subvention_8.svg',
+                z-index: 200,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var dfrr_8_style = L.icon({
                 iconUrl: 'data/dfrr_8.svg',
+                z-index: 200,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ui_8_style = L.icon({
                 iconUrl: 'data/ui_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var giz_8_style = L.icon({
                 iconUrl: 'data/egap_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var giz_8_pr_style = L.icon({
                 iconUrl: 'data/egap_pr_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ulead_8_style = L.icon({
                 iconUrl: 'data/rest_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ulead_8_pr_style = L.icon({
                 iconUrl: 'data/rest_8_pr.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var undp_8_style = L.icon({
                 iconUrl: 'data/ulead_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
@@ -732,30 +793,35 @@
 
             var euproject_8_style = L.icon({
                 iconUrl: 'data/euproject_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var euproject_8_pr_style = L.icon({
                 iconUrl: 'data/euproject_pr_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var egap_8_style = L.icon({
                 iconUrl: 'data/undp_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var egap_8_pr_style = L.icon({
                 iconUrl: 'data/undp_pr_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var rest_8_style = L.icon({
                 iconUrl: 'data/giz_8.svg',
+                z-index: 100,
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });          
