--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     radius: 1,
                     fillColor: "orange",
                     color: "orange",
-                    z-index:100,
+                    zindex:100,
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
